--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -4,7 +4,7 @@
     "introduction": "Cet outil vous permet de planifier vos itinéraires en transports en commun avec un diagramme temps-espace interactif, basé sur des données en temps réel (actuellement surtout pour l'Allemagne).",
     "from": "Station de départ",
     "to": "Station d'arrivée",
-    "interchanges_explanation": "Vous devez entrer des possibles stations de correspondance (jusqu'à 10). Seulement des connexions directes entre ces stations seront trouvées.",
+    "interchanges_explanation": "Vous devez entrer toutes les stations de correspondance potentielles (jusqu'à 10). Seulement des connexions directes entre ces stations seront trouvées.",
     "via": "Correspondance",
     "default_now": "Par défaut maintenant",
     "regionly": "Transport régional uniquement",
@@ -29,5 +29,9 @@
     "error_http_502": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou d'autres paramètres de la requête ne sont pas valides.",
     "error_http_503": "Échec de la requête des données d'horaire. Peut-être trop de requêtes. Veuillez ressayer plus tard.",
     "error_http_unknown": "Erreur de serveur inconnu.",
-    "error_unknown": "Connection au serveur echouée. Êtes-vous hors ligne ?"
+    "error_unknown": "Connection au serveur echouée. Êtes-vous hors ligne ?",
+    "tip": "Tuyeau",
+    "tip_0": "En cliquant sur une connexion, l'itinéraire le plus court de la station de départ à la station d'arrivée via cette connexion est marquée en bleu.",
+    "tip_1": "Laissez la date/heure non définie et créez un signet de la page de diagramme afin de toujours accéder facilement au diagramme actuel.",
+    "tip_2": "Utilisez les flèches apparaissant au-dessus et au-dessous des connexions sélectionnées pour trouver les arrivées d'avant et les départs d'après des stations respectives."
 }
