map HAFAS errors to http 400, so that it can be distinguished from nginx 502 timeout

--- a/ui/src/lib/translations/de.json
+++ b/ui/src/lib/translations/de.json
@@ -24,9 +24,9 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "Zu Fuß",
     "error": "Fehler",
-    "error_http_400": "Start oder Ziel existieren nicht oder haben keine Ankünfte/Abfahrten.",
+    "error_http_400": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise ist der angefragte Zeitraum zu weit in der Vergangenheit oder Zukunft, oder Start oder Ziel existieren nicht oder haben keine Ankünfte/Abfahrten.",
     "error_http_500": "Unerwarteter Serverfehler.",
-    "error_http_502": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise ist der angefragte Zeitraum zu weit in der Vergangenheit oder Zukunft oder andere Anfrageparameter sind ungültig.",
+    "error_http_502": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise dauerte das Abrufen der Daten zu lang. Bitte erneut versuchen.",
     "error_http_503": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise zu viele Anfragen. Bitte später erneut versuchen.",
     "error_http_unknown": "Unbekannter Serverfehler.",
     "error_unknown": "Verbindung zum Server fehlgeschlagen. Sind sie offline?",
