--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -24,9 +24,9 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "À pied",
     "error": "Erreur",
-    "error_http_400": "Station de départ ou d'arrivée n'existe pas ou n'a pas de départs ou d'arrivées.",
+    "error_http_400": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou la station de départ ou d'arrivée n'existe pas ou n'a pas de départs ou d'arrivées.",
     "error_http_500": "Erreur de serveur inattendu.",
-    "error_http_502": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou d'autres paramètres de la requête ne sont pas valides.",
+    "error_http_502": "Échec de la requête des données d'horaire. Peut-être la requête a pris trop de temps. Veuillez ressayer.",
     "error_http_503": "Échec de la requête des données d'horaire. Peut-être trop de requêtes. Veuillez ressayer plus tard.",
     "error_http_unknown": "Erreur de serveur inconnu.",
     "error_unknown": "Connection au serveur echouée. Êtes-vous hors ligne ?",
