--- a/ui/src/lib/translations/en.json
+++ b/ui/src/lib/translations/en.json
@@ -24,9 +24,9 @@
     "local": "Bus, Tram, etc.",
     "pedestrian": "On Foot",
     "error": "Error",
-    "error_http_400": "Origin or destination does not exist or does not have any arrivals/departures.",
+    "error_http_400": "Requested time might be too far in the future or past, or origin or destination do not exist or do not have any arrivals/departures.",
     "error_http_500": "Unexpected server error.",
-    "error_http_502": "Failed requesting timetable data. Requested time might be too far in the future or past or other request parameters might be invalid.",
+    "error_http_502": "Failed requesting timetable data. Retrieving the data might have taken too long. Try again.",
     "error_http_503": "Failed requesting timetable data. Possibly too many requests. Try again later.",
     "error_http_unknown": "Unknown server error.",
     "error_unknown": "Connection to server failed. Are you offline?",
