--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -25,6 +25,7 @@
     "pedestrian": "À pied",
     "stay_on": "rester dans",
     "next_best_departures": "Prochaines meilleures correspondances à",
+    "no_known_connections": "Aucune correspondance trouvée à cette heure-ci.",
     "error": "Erreur",
     "error_http_400": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou la station de départ ou d'arrivée n'existe pas ou n'a pas de départs ou d'arrivées.",
     "error_http_500": "Erreur de serveur inattendu.",
