--- a/ui/src/lib/translations/en.json
+++ b/ui/src/lib/translations/en.json
@@ -36,5 +36,6 @@
     "tip": "Tip",
     "tip_0": "If you click on a connection, the shortest route from origin to destination via this connection is highlighted in blue.",
     "tip_1": "Leave the date/time unset and create a bookmark of the diagram page in order to easily always access the current diagram.",
-    "tip_2": "Use the arrows appearing above and below selected connections to find earlier arrivals and later departures from the respective stations."
+    "tip_2": "Use the arrows appearing above and below selected connections to find earlier arrivals and later departures from the respective stations.",
+    "tip_3": "Click on a station name in the diagram or on the back arrow in the detail view to show the next best connections from the respective station."
 }
