show lower and upper 5% times, jump to details, intially show next departures from origin

--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -25,6 +25,9 @@
     "pedestrian": "À pied",
     "stay_on": "rester dans",
     "next_best_departures": "Prochaines meilleures correspondances à",
+    "header_departure": "départ",
+    "header_direction": "mission",
+    "header_destination_arrival": "⌀ arrivée destination",
     "no_known_connections": "Aucune correspondance trouvée à cette heure-ci.",
     "error": "Erreur",
     "error_http_400": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou la station de départ ou d'arrivée n'existe pas ou n'a pas de départs ou d'arrivées.",
