--- a/ui/src/lib/translations/de.json
+++ b/ui/src/lib/translations/de.json
@@ -25,6 +25,9 @@
     "pedestrian": "Zu Fuß",
     "stay_on": "bleiben in",
     "next_best_departures": "Nächste beste Verbindungen von",
+    "header_departure": "Abfahrt",
+    "header_direction": "Verbindung",
+    "header_destination_arrival": "⌀ Ankunft Ziel",
     "no_known_connections": "Keine bekannten Verbindungen zur gewählten Zeit.",
     "error": "Fehler",
     "error_http_400": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise ist der angefragte Zeitraum zu weit in der Vergangenheit oder Zukunft, oder Start oder Ziel existieren nicht oder haben keine Ankünfte/Abfahrten.",
