--- a/ui/src/lib/translations/en.json
+++ b/ui/src/lib/translations/en.json
@@ -28,7 +28,7 @@
     "header_departure": "Departure",
     "header_direction": "Connection",
     "header_destination_arrival": "⌀ Destination Arrival",
-    "no_known_connections": "No connections known at this time.",
+    "no_known_connections": "No connections known at this time. Consider modifying the query or select a different time window to display.",
     "error": "Error",
     "error_http_400": "Requested time might be too far in the future or past, or origin or destination do not exist or do not have any arrivals/departures.",
     "error_http_500": "Unexpected server error.",
@@ -40,5 +40,12 @@
     "tip_0": "If you click on a connection, the shortest route from origin to destination via this connection is highlighted in blue.",
     "tip_1": "Leave the date/time unset and create a bookmark of the diagram page in order to easily always access the current diagram.",
     "tip_2": "Use the arrows appearing above and below selected connections to find earlier arrivals and later departures from the respective stations.",
-    "tip_3": "Click on a station name in the diagram or on the back arrow in the detail view to show the next best connections from the respective station."
+    "tip_3": "Click on a station name in the diagram or on the back arrow in the detail view to show the next best connections from the respective station.",
+    "explain_mean": "Average arrival at {{destination}}",
+    "explain_mode": "Most likely arrival at {{destination}}",
+    "explain_95th": "Arrival with 95% until then",
+    "explain_share_mean": "I will arrive at {{destination}} on average at {{time}}.",
+    "explain_share_mode": "My most likely time of arrival is {{time}}.",
+    "explain_share_95th": "With an estimated probability of 95%, I will arrive before {{time}}.",
+    "explain_share_title": "My arrival time at {{destination}}"
 }
