move discard of same-group footpaths to frontend, hide tsd, fix soft 404, usability, styling

--- a/ui/src/lib/translations/de.json
+++ b/ui/src/lib/translations/de.json
@@ -1,7 +1,7 @@
 {
     "report": "Problem melden",
     "imprint": "Impressum/Datenschutz",
-    "introduction": "Dieses Tool ermöglicht es, Reisen mit öffentlichen Verkehrsmitteln mithilfe eines interaktiven Raum-Zeit-Diagramms zu planen, auf Basis von Echtzeit-Fahrplandaten (aktuell nur Deutschland).",
+    "introduction": "Statt mit öffentlichen Verkehrsmitteln eine feste Reise von Start nach Ziel zu planen, zeigt dieses Tool für die aktuelle Situation beim Umstieg die nächsten besten Alternativen mit ihrer Wahrscheinlichkeitsverteilung der Zielankunftszeit.",
     "from": "Von",
     "to": "Nach",
     "interchanges_explanation": "Bitte geben Sie alle potenziellen Umsteigestationen ein (bis zu 10). Nur direkte Verbindungen zwischen diesen Stationen werden gefunden.",
@@ -12,7 +12,7 @@
     "data_retrieval_waiting": "Datenabruf kann bis zu einer Minute dauern.",
     "no_results": "Keine Ergebnisse.",
     "platform": "Gl.",
-    "bus_platform": "Steig ",
+    "bus_platform": "Stg.",
     "cancelled": "fällt aus",
     "modify_query": "Abfrage anpassen",
     "legend": "Legende",
@@ -29,19 +29,21 @@
     "header_departure": "Abfahrt",
     "header_direction": "Verbindung",
     "header_destination_arrival": "⌀ Ankunft Ziel",
-    "no_known_connections": "Keine bekannten Verbindungen zur gewählten Zeit. Passen Sie die Abfrage an oder wählen sie einen anderen Zeitraum für die Anzeige aus.",
+    "no_earlier_connections": "Beginn des Abfragezeitraums. Passen Sie die Abfrage an oder wählen Sie einen anderen Zeitraum für die Anzeige aus.",
+    "no_later_connections": "Ende des Abfragezeitraums. Passen Sie die Abfrage an oder wählen Sie einen anderen Zeitraum für die Anzeige aus.",
     "error": "Fehler",
     "error_http_400": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise ist der angefragte Zeitraum zu weit in der Vergangenheit oder Zukunft, oder Start oder Ziel existieren nicht oder haben keine Ankünfte/Abfahrten.",
     "error_http_500": "Unerwarteter Serverfehler.",
     "error_http_502": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise dauerte das Abrufen der Daten zu lang. Bitte erneut versuchen.",
     "error_http_503": "Abrufen von Fahrplandaten fehlgeschlagen. Möglicherweise zu viele Anfragen. Bitte später erneut versuchen.",
     "error_http_unknown": "Unbekannter Serverfehler.",
-    "error_unknown": "Verbindung zum Server fehlgeschlagen. Sind sie offline?",
+    "error_unknown": "Verbindung zum Server fehlgeschlagen. Sind Sie offline?",
+    "show_tsd": "Raum-Zeit-Diagramm anzeigen",
     "tip": "Tipp",
-    "tip_0": "Durch Klicken auf eine Verbindung wird die kürzeste Route vom Start zum Ziel über diese Verbindung blau hervorgehoben.",
-    "tip_1": "Wenn Datum/Uhrzeit nicht gesetzt sind, kann man ein Browser-Bookmark auf die Diagramm-Seite anlegen und jederzeit einfach das aktuelle Diagramm aufrufen.",
-    "tip_2": "Mit den Pfeilen, die über und unter ausgewählten Verbindungen erscheinen, kann zu früheren Ankünften und späteren Abfahrten an der entsprechenden Station gesprungen werden.",
-    "tip_3": "Durch Klicken auf einen Stationsnamen im Diagramm oder auf den Zurück-Pfeil in der Detailansicht können die nächsten besten Verbindungen von der entsprechenden Station angezeigt werden.",
+    "tip_0": "Durch Klicken/Tippen auf eine Verbindung steigt man quasi ein, und die nächsten besten Verbindungen vom nächsten relevanten Stop dieser Verbindung werden angezeigt.",
+    "tip_1": "Wenn Datum/Uhrzeit nicht gesetzt sind, kann man ein Browser-Bookmark auf diese Seite anlegen und jederzeit einfach die aktuelle Ansicht aufrufen.",
+    "tip_2": "TeSpace funktioniert wie ein Navi im Auto: Es werden immer nur die Alternativen für den nächsten relevanten Schritt angezeigt, wie es weitergeht, sieht man später.",
+    "tip_3": "Durch Klicken auf den Zurück-Pfeil links in der Detailansicht kann zur vorherigen Station zurückgesprungen werden.",
     "explain_mean": "Durchschnittliche Ankunft an {{destination}}",
     "explain_mode": "Wahrscheinlichste Ankunft an {{destination}}",
     "explain_95th": "Ankunft zu 95% bis dahin",
