--- a/ui/src/lib/translations/en.json
+++ b/ui/src/lib/translations/en.json
@@ -1,7 +1,7 @@
 {
     "report": "Report an issue",
     "imprint": "Imprint/Privacy",
-    "introduction": "This tool allows you to plan your public transport journeys using an interactive time-space diagram, based on live timetable data (currently Germany only).",
+    "introduction": "Instead of planning a fixed public transport journey from origin to destination upfront, this tool shows the next best alternatives for the current transfer situation with their destination arrival distribution (currently Germany only).",
     "from": "From",
     "to": "To",
     "interchanges_explanation": "You need to enter all potential interchange stations (up to 10). Only direct connections between these stations will be found.",
@@ -29,7 +29,8 @@
     "header_departure": "Departure",
     "header_direction": "Connection",
     "header_destination_arrival": "⌀ Destination Arrival",
-    "no_known_connections": "No connections known at this time. Consider modifying the query or select a different time window to display.",
+    "no_earlier_connections": "Start of query period reached. Consider modifying the query or select a different time window to display.",
+    "no_later_connections": "End of query period reached. Consider modifying the query or select a different time window to display.",
     "error": "Error",
     "error_http_400": "Requested time might be too far in the future or past, or origin or destination do not exist or do not have any arrivals/departures.",
     "error_http_500": "Unexpected server error.",
@@ -37,11 +38,12 @@
     "error_http_503": "Failed requesting timetable data. Possibly too many requests. Try again later.",
     "error_http_unknown": "Unknown server error.",
     "error_unknown": "Connection to server failed. Are you offline?",
+    "show_tsd": "Show time-space diagram",
     "tip": "Tip",
-    "tip_0": "If you click on a connection, the shortest route from origin to destination via this connection is highlighted in blue.",
-    "tip_1": "Leave the date/time unset and create a bookmark of the diagram page in order to easily always access the current diagram.",
-    "tip_2": "Use the arrows appearing above and below selected connections to find earlier arrivals and later departures from the respective stations.",
-    "tip_3": "Click on a station name in the diagram or on the back arrow in the detail view to show the next best connections from the respective station.",
+    "tip_0": "By clicking/tapping on a connection, you basically board it, and the next best connections from the next relevant stop of that connection are shown.",
+    "tip_1": "Leave the date/time unset and create a bookmark of this page in order to easily always access the current view.",
+    "tip_2": "TeSpace works like a car navigation system: Only the alternatives for the next relevant step are shown, you will see later how to continue further.",
+    "tip_3": "Click on the back arrow on the left in the detail view to return to the previous station.",
     "explain_mean": "Average arrival at {{destination}}",
     "explain_mode": "Most likely arrival at {{destination}}",
     "explain_95th": "Arrival with 95% until then",
