--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -1,7 +1,7 @@
 {
     "report": "Signaler un problème",
     "imprint": "Mentions légales/Protection des données",
-    "introduction": "Cet outil vous permet de planifier vos itinéraires en transports en commun avec un diagramme temps-espace interactif, basé sur des données en temps réel (actuellement surtout pour l'Allemagne).",
+    "introduction": "Au lieu de planifier un itinéraire fixe en transports en commun du lieu de départ à la destination, cet outil montre les meilleures correspondances pour la situation actuelle et leur distribution du temps d'arrivée (actuellement surtout pour l'Allemagne).",
     "from": "Station de départ",
     "to": "Station d'arrivée",
     "interchanges_explanation": "Vous devez entrer toutes les stations de correspondance potentielles (jusqu'à 10). Seulement des connexions directes entre ces stations seront trouvées.",
@@ -11,8 +11,8 @@
     "submit": "Recherchez",
     "data_retrieval_waiting": "La récupération des données peut prendre jusqu'à une minute.",
     "no_results": "Pas de résultats.",
-    "platform": "Voie ",
-    "bus_platform": "Quai ",
+    "platform": "voie ",
+    "bus_platform": "quai ",
     "cancelled": "supprimé",
     "modify_query": "Modifier la requête",
     "legend": "Légende",
@@ -29,7 +29,8 @@
     "header_departure": "départ",
     "header_direction": "mission",
     "header_destination_arrival": "⌀ arrivée destination",
-    "no_known_connections": "Aucune correspondance trouvée à cette heure-ci. Modifiez la requête ou choisissez un autre temps à afficher.",
+    "no_earlier_connections": "Début de la periode de requête. Modifiez la requête ou choisissez un autre temps à afficher.",
+    "no_later_connections": "Fin de la periode de requête. Modifiez la requête ou choisissez un autre temps à afficher.",
     "error": "Erreur",
     "error_http_400": "Échec de la requête des données d'horaire. Peut-être l'heure requise est trop loin dans le futur ou dans le passé, ou la station de départ ou d'arrivée n'existe pas ou n'a pas de départs ou d'arrivées.",
     "error_http_500": "Erreur de serveur inattendu.",
@@ -37,11 +38,12 @@
     "error_http_503": "Échec de la requête des données d'horaire. Peut-être trop de requêtes. Veuillez ressayer plus tard.",
     "error_http_unknown": "Erreur de serveur inconnu.",
     "error_unknown": "Connection au serveur echouée. Êtes-vous hors ligne ?",
+    "show_tsd": "Afficher diagramme temps-espace",
     "tip": "Tuyeau",
-    "tip_0": "En cliquant sur une connexion, l'itinéraire le plus court de la station de départ à la station d'arrivée via cette connexion est marquée en bleu.",
-    "tip_1": "Laissez la date/heure non définie et créez un signet de la page de diagramme afin de toujours accéder facilement au diagramme actuel.",
-    "tip_2": "Utilisez les flèches apparaissant au-dessus et au-dessous des connexions sélectionnées pour trouver les arrivées d'avant et les départs d'après des stations respectives.",
-    "tip_3": "En cliquant sur un nom de station dans le diagramme ou sur la flèche de retour dans la vue détaillée, les prochaines meilleures connexions de la station peuvent être affichées.",
+    "tip_0": "En cliquant sur une connexion/mission, on y monte, et les meilleures correspondances au prochain arrêt relevant de cette mission seront affichées.",
+    "tip_1": "Laissez la date/heure non définie et créez un signet de cette page afin de toujours accéder facilement à l'affichage actuel.",
+    "tip_2": "TeSpace marche comme un GPS à la voiture: Juste les alternatives pour le prochain pas rélévant sont affichés, on verra comment continuer plus tard.",
+    "tip_3": "En cliquant sur la flèche de retour à gauche dans la vue détaillée, les prochaines meilleures connexions de la station précedente peuvent être affichées.",
     "explain_mean": "Arrivée en moyenne à {{destination}}",
     "explain_mode": "Temps d'arrivée le plus probable",
     "explain_95th": "Arrivée avec 95% jusque-là",
