--- a/ui/src/lib/translations/fr.json
+++ b/ui/src/lib/translations/fr.json
@@ -55,5 +55,6 @@
     "walking_to": "à",
     "walking_from": "départ de",
     "earlier_departures": "Plus tôt",
-    "later_departures": "Plus tard"
+    "later_departures": "Plus tard",
+    "coach_sequence": "Composition du train"
 }
